--- a/src/app/pop-up/notification-search-provider/notification-search-provider.component.html
+++ b/src/app/pop-up/notification-search-provider/notification-search-provider.component.html
@@ -81,7 +81,7 @@
                         <ag-grid-angular style="width: 100%; height: 350px;" class="ag-theme-alpine" [rowData]="providerList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="rowClicked($event)">
                             <ag-grid-column headerName="Código" field="cproveedor" [width]="259" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Nombre" field="xnombre" [width]="259" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Servicio" field="xservicio" [width]="259" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Identidad" field="xdocidentidad" [width]="259" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Teléfono" field="xtelefonoproveedor" [width]="250" [sortable]="true"></ag-grid-column>
                         </ag-grid-angular>
                     </div>
