se arreglo la letra del toolbar

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -33,7 +33,7 @@
           <ul *ngIf="auth" class="navbar-nav mr-auto" >
             <li class="nav-item dropdown" *ngFor="let group of groupList">
               
-              <a class="nav-item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+              <a class="nav-item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="text-transform: capitalize;">
                 {{ group.xgrupo | translate }}
               </a>
               
