--- a/src/app/business/subscription-report/subscription-report.component.html
+++ b/src/app/business/subscription-report/subscription-report.component.html
@@ -23,11 +23,17 @@
                         <div class="row">
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
-                                    <label>Hasta</label>
-                                    <input type="date" formControlName="fhasta" class="form-control" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fhasta').errors }" (change)="onChangeDateUntil()">
-                                    <div *ngIf="submitted && search_form.get('fhasta').errors"  class="invalid-feedback">
-                                    </div>
+                                  <label>Desde</label>
+                                  <input type="date" formControlName="fdesde" class="form-control" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fdesde').errors }" (change)="onChangeDateFrom()">
+                                  <div *ngIf="submitted && search_form.get('fdesde').errors"  class="invalid-feedback"></div>
                                 </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                              <div class="form-group">
+                                <label>Hasta</label>
+                                <input type="date" formControlName="fhasta" class="form-control" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fhasta').errors }" (change)="onChangeDateUntil()">
+                                <div *ngIf="submitted && search_form.get('fhasta').errors"  class="invalid-feedback"></div>
+                              </div>
                             </div>
                         </div>
                     </form>
