--- a/src/app/products/plan/plan-detail/plan-detail.component.html
+++ b/src/app/products/plan/plan-detail/plan-detail.component.html
@@ -95,7 +95,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5">
+    <!-- <div class="row mt-5">
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header company-card-header">
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="row mt-5 mb-5">
         <div class="col-sm-12">
             <div class="card">
