--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,12 @@ nav{
 .card{
     position: static;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
+
