--- a/src/app/products/plan/plan-detail/plan-detail.component.html
+++ b/src/app/products/plan/plan-detail/plan-detail.component.html
@@ -149,7 +149,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5 mb-5">
+    <!-- <div class="row mt-5 mb-5">
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header company-card-header">
@@ -175,7 +175,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 
 <footer>    
